<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/miLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dado5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/AboutDados"
        android:padding="3dp"
        app:layout_constraintStart_toEndOf="@+id/dado4"
        app:layout_constraintTop_toTopOf="@+id/dado4"
        app:srcCompat="@drawable/dadocara5" />

    <ImageView
        android:id="@+id/dado4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/AboutDados"
        android:padding="3dp"
        app:layout_constraintStart_toEndOf="@+id/dado3"
        app:layout_constraintTop_toTopOf="@+id/dado3"
        app:srcCompat="@drawable/dadocara4" />

    <ImageView
        android:id="@+id/dado3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/AboutDados"
        android:padding="3dp"
        app:layout_constraintStart_toEndOf="@+id/dado2"
        app:layout_constraintTop_toTopOf="@+id/dado2"
        app:srcCompat="@drawable/dadocara3" />

    <ImageView
        android:id="@+id/dado1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/AboutDados"
        android:padding="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto"
        app:srcCompat="@drawable/dadocara1" />

    <ImageView
        android:id="@+id/dado2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/AboutDados"
        android:padding="3dp"
        app:layout_constraintStart_toEndOf="@+id/dado1"
        app:layout_constraintTop_toTopOf="@+id/dado1"
        app:srcCompat="@drawable/dadocara2" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/nombreJuego"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRoll"
        android:layout_width="228dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:onClick="tirarDados"
        android:text="@string/tirarDadoTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dado3" />

    <Button
        android:id="@+id/btnEscogerFours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/fours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoll" />

    <Button
        android:id="@+id/btnEscogerSixes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/sixes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerFours" />

    <Button
        android:id="@+id/btnEscogerFullHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/fullHouse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerSixes" />

    <Button
        android:id="@+id/btnEscogerFives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fives"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoll" />

    <Button
        android:id="@+id/btnEscogerStraight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/straight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerFives" />

    <Button
        android:id="@+id/btnEscogerChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerStraight" />

    <Button
        android:id="@+id/btnEscogerBalut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:text="@string/balut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoll" />

    <TextView
        android:id="@+id/puntuacionFours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEscogerFours"
        app:layout_constraintStart_toStartOf="@+id/btnEscogerFours"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerFours" />

    <TextView
        android:id="@+id/puntuacionFives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEscogerFives"
        app:layout_constraintStart_toStartOf="@+id/btnEscogerFives"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerFives" />

    <TextView
        android:id="@+id/puntuacionSixes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEscogerSixes"
        app:layout_constraintStart_toStartOf="@+id/btnEscogerSixes"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerSixes" />

    <TextView
        android:id="@+id/puntuacionStraight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEscogerStraight"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="@+id/btnEscogerStraight"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerStraight" />

    <TextView
        android:id="@+id/puntuacionFullHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEscogerFullHouse"
        app:layout_constraintStart_toStartOf="@+id/btnEscogerFullHouse"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerFullHouse" />

    <TextView
        android:id="@+id/puntuacionChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEscogerChoice"
        app:layout_constraintStart_toStartOf="@+id/btnEscogerChoice"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerChoice" />

    <TextView
        android:id="@+id/puntuacionBalut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnEscogerBalut"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/btnEscogerBalut"
        app:layout_constraintTop_toBottomOf="@+id/btnEscogerBalut" />

    <TextView
        android:id="@+id/tituloTirosRestantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="12dp"
        android:text="@string/tituloTiros"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textoTirosRestantes"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRoll" />

    <TextView
        android:id="@+id/textoTirosRestantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tituloTirosRestantes" />

    <TextView
        android:id="@+id/tituloTurnosRestantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tituloTurnos"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnEscogerFives"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toEndOf="@+id/btnEscogerFours"
        app:layout_constraintTop_toBottomOf="@+id/tituloTirosRestantes" />

    <TextView
        android:id="@+id/textoTurnosRestantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/raya"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btnEscogerStraight"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/btnEscogerSixes"
        app:layout_constraintTop_toBottomOf="@+id/tituloTurnosRestantes" />

</androidx.constraintlayout.widget.ConstraintLayout>